--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "dotenv": "^8.1.0",
-    "http-proxy": "^1.17.0"
+    "http-proxy": "^1.17.0",
+    "pretty-ms": "^5.0.0"
   }
 }
